syntax = "proto3";
package pb;

option go_package = ".;pb";

message Message {
    uint64 Id       = 1;
    bytes  Data     = 2;
    uint64 Node     = 3;
    bytes Signature = 4;
}

message PeerInfo {
    bytes PublicKey   = 1;
    int64 BlockNumber = 2;
}
